[systemsettings] Add USB tethering support
Bump version also.

Signed-off-by: Philippe De Swert <philippe.deswert@jollamobile.com>

--- a/rpm/nemo-qml-plugin-systemsettings.yaml
+++ b/rpm/nemo-qml-plugin-systemsettings.yaml
@@ -13,7 +13,7 @@ Builder: qmake5
 PkgConfigBR:
     - Qt5Qml
     - Qt5SystemInfo
-    - qmsystem2-qt5
+    - qmsystem2-qt5  >= 1.4.15
     - profile
     - mce
 Files:
